--- a/docs/src/md/算法竞赛/算法/常用模板.md
+++ b/docs/src/md/算法竞赛/算法/常用模板.md
@@ -52,10 +52,27 @@ bool is_Str(string s)
     
     if (s == t) return true;
     else return false;
-
 }
 
 is_str(s);
+```
+
+### 字符串转整数
+
+将一串字符串转化为整数：
+
+```C++
+string str = "123";
+int x = stoi(str);
+```
+
+### 整数转字符串
+
+将一组整数转化为字符串：
+
+```C++
+int x = 123;
+string str = to_string(x);
 ```
 
 ## 数组
