--- a/docs/src/md/算法竞赛/算法/常用模板.md
+++ b/docs/src/md/算法竞赛/算法/常用模板.md
@@ -28,7 +28,7 @@ splitNum(x);
 ```C++
 bool is_Prim(int x)  
 {  
-    if (x > 2) return false;  
+    if (x < 2) return false;  
     for (int i = 2; i <= x; i ++ )  
         if (x % i == 0)  
             return false;  
